--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-cat > docker-compose.yml << 'EOF'
 version: '3.8'
 
 services:
@@ -13,8 +12,13 @@ services:
     volumes:
       - sqlite-data:/app/server/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
 
 volumes:
   sqlite-data:
     driver: local
-EOF
