--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,17 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5000
+      - JWT_SECRET=quickcart-docker-secret-key-2024
     volumes:
-      - ./data:/app/data
+      - app-data:/app/data
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 5s
+      start_period: 10s
 
 volumes:
-  sqlite-data:
+  app-data:
     driver: local
